--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>One of the best Artist of the past decades.</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="YOURFILENAME.css" rel="stylesheet">
+</head>
+<body>  
+<header>
+<h1>Famous Rapper</h1>
+</header>
+     <nav>
+       <h4><a href="index.html">Playboi Carti</a></h4>
+       <h4><a href="travis.html">Travis Scott</a></h4>
+       <h4><a href="future.html">Future</a></h4>       
+     </nav>
+     <main>
+       <img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2024%2F12%2F16%2Fplayboi-carti-i-am-music-rolling-loud-miami-preview-stream-1.jpg?q=75&w=800&cbr=1&fit=max" width="300" alt="">
+       <h2>Playboi Carti</h2>
+       <div>
+         Born:September 13th 1996
+       </div>
+       <div>
+       Influentional Artist
+       </div>
+<div>
+ Barely Graduated High School 
+     </div>
+     <h4>Biography</h4>
+     <p>Jordan Terrell Carter mostly known as Playboi Carti, Jordan Terrell Carter started making freestyles in school and by the end of his highschool years he started to get more into making music and started releasing songs that caught the attention of Underground record lable "Awful Records" then soon after signed to Asap Mobs record lable "AWGE" Carti then would go on to release his self titled debut album and it was loved by many and had major hits like Magnolia and Wokeuplikethis featuring lil uzi. He would listen to his listeners feedback then go on to release his next album die lit. Once again adored and loved by many. Then everything would change when Carti would release whole lotta red on Christmas of 2020. It was hated by many and people said it was terrible. Carti knew his album was good and he was right. Overtime the album grew on people and it was loved by the community. He hasn't released an album since 2020 and hes been previewing his new album I AM MUSIC for the past year. Hes been on a generational feature run and has been carrying songs hes featured on. I AM MUSIC was titled 2024 music. Its 2025 so no one really knows when the albums planned to release. </p>
+   <h4>Notable Contributions:</h4>
+   <ul>
+     <li>Changed the rap industry forever with the release of Whole Lotta Red</li>
+       <li> Formed Opium which is his own lable and brought small artists and made them known. Rappers like Destroy Lonely, Ken Carson and Homixide gang are the only members so far.</li>
+     <li>Has some of the best features on history. </li>
+     </ul>
+   <h4>Famous Quote:</h4>
+   <blockquote>When you go out, go out with a bang, anything you do.</blockquote>
+   </main>
+  <footer>
+    <p>JR Web Design 
+      &copy; 2023
+    </p>
+</footer>
+</body>
+</html>
