--- a/travis.html
+++ b/travis.html
@@ -1,1 +1,49 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>One of the best Artist of the past decades.</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="YOURFILENAME.css" rel="stylesheet">
+</head>
+<body>  
+<header>
+<h1>Famous Rappers</h1>
+</header>
+      <nav>
+       <h4><a href="index.html">Playboi Carti</a></h4>
+       <h4><a href="travis.html">Travis Scott</a></h4>
+       <h4><a href="future.html">Future</a></h4>       
+     </nav>
+     <main>
+       <img src="https://m.media-amazon.com/images/I/81UIqmn17WL.jpg" width="300" alt="">
+       <h2>Travis Scott</h2>
+       <div>
+         Born: April 30th 1991
+       </div>
+       <div>
+       Influentional Artist
+       </div>
+<div>
+ Dropped out of College 
+     </div>
+     <h4>Biography</h4>
+     <p>Jacques Bermon Webster II most famously known as Travis Scott is one of the best rappers of the 2000's and spread influence across hundreds. He graduated highschool and once he was in college he would use the money his mother would give him on plane tickets and things for his music. Once his mom found out she cut him off and Travis had nothing. Until famous artist Kanye West heard his music and signed him to his label and wanted Travis to produce music. After producing music for a while he made his own album Days Before Rodeo and it was liked by many. He took it down due to production issues and later started teasing his next album Rodeo. It was a massive hit then he went on to create Birds in the trap sing Mcknight and he the went on to release Astroworld. Astroworld was an amazing album but at his Astroworld concert tour people died in the crowd and he had no knowledge of what happened but recieved much backlash. He apologized then went MIA for years then in 2023 due to his daughter asking him to make music again he released Utopia and won everyones hearts again and his song My Eyes explained his view in the Astroworld incident. He revived his career and has been loved ever since.   </p>
+   <h4>Notable Contributions:</h4>
+   <ul>
+     <li>Influenced thousands of people.</li>
+       <li> Formed his label Cactus Jack and signed people like Don Toliver and Sheck Wes. </li>
+     <li>Has some of the best collab songs of all time. </li>
+     </ul>
+   <h4>Famous Quote:</h4>
+   <blockquote>We all need to just fly. Everybody just has different steps in their life that they take to do what they should. I'm just here for good times, man. I want people to have the best time ever.</blockquote>
+   </main>
+  <footer>
+    <p>JR Web Design 
+      &copy; 2023
+    </p>
+</footer>
+</body>
+</html>
